projects/vb6parse/snapshots/tests/library/resources/loadresstring/loadresstring_collection_add.snap
---
source: projects/vb6parse/tests/library/resources/loadresstring.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: Whitespace
      text: "            "
    - kind: CallStatement
      children:
        - kind: Identifier
          text: messages
        - kind: PeriodOperator
          text: "."
        - kind: Identifier
          text: Add
        - kind: Whitespace
          text: " "
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: LoadResString
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "23001"
                    - kind: RightParenthesis
                      text: )
            - kind: Comma
              text: ","
            - kind: Whitespace
              text: " "
            - kind: Argument
              children:
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"WelcomeMsg\""
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "        "
